--- a/app/src/main/res/navigation/navigation_bottom.xml
+++ b/app/src/main/res/navigation/navigation_bottom.xml
@@ -19,9 +19,5 @@
         android:name="com.livmas.tictactab.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
-    <fragment
-        android:id="@+id/navigation_game"
-        android:name="com.livmas.tictactab.ui.game.main.GameMainFragment"
-        android:label="fragment_game_main"
-        tools:layout="@layout/fragment_game_main" />
+    <include app:graph="@navigation/navigation_game" />
 </navigation>
