--- a/app/src/main/res/layout/fragment_classic_game_session.xml
+++ b/app/src/main/res/layout/fragment_classic_game_session.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.game.sessions.primitive.PrimitiveGameSessionFragment">
+    tools:context=".ui.game.sessions.classic.ClassicGameSessionFragment">
 
     <TextView
         android:layout_width="match_parent"
