--- a/app/src/main/res/layout/fragment_complex_game_session.xml
+++ b/app/src/main/res/layout/fragment_complex_game_session.xml
@@ -1,13 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.game.sessions.complex.ComplexGameSessionFragment">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:divider="@drawable/line_material"
+    android:showDividers="middle"
+    tools:context=".ui.fragments.game.sessions.complex.ComplexGameSessionFragment">
 
-    <TextView
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:divider="@drawable/line_material"
+        android:showDividers="middle">
 
-</FrameLayout>
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_0.0"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_0.1"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_0.2"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@drawable/line_material"
+        android:showDividers="middle">
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_1.0"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_1.1"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_1.2"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@drawable/line_material"
+        android:showDividers="middle">
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_2.0"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_2.1"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="130dp"
+            android:layout_height="130dp">
+
+            <include
+                android:id="@+id/block_2.2"
+                layout="@layout/classic_game_field_layout" />
+        </FrameLayout>
+    </TableRow>
+
+</TableLayout>
