--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,8 @@
         <item name="android:windowBackground">@color/white</item>
 <!--        <item name="actionBarSize">0dp</item>-->
     </style>
+
+    <style name="field_line">
+        <item name="android:background">?attr/colorPrimary</item>
+    </style>
 </resources>
