--- a/app/src/main/res/layout/classic_game_field_layout.xml
+++ b/app/src/main/res/layout/classic_game_field_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/view2" />
+        app:layout_constraintStart_toEndOf="@+id/view2"/>
 
     <View
         android:id="@+id/view2"
@@ -48,7 +48,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/cell_coordinates_0_0"/>
+        android:contentDescription="@string/cell_coordinates_0_0"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell0_1"
@@ -58,7 +61,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view"
         app:layout_constraintStart_toEndOf="@+id/view2"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/cell_coordinates_0_1"/>
+        android:contentDescription="@string/cell_coordinates_0_1"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell0_2"
@@ -68,7 +74,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/cell_coordinates_0_2"/>
+        android:contentDescription="@string/cell_coordinates_0_2"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell1_0"
@@ -78,7 +87,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3"
-        android:contentDescription="@string/cell_coordinates_1_0"/>
+        android:contentDescription="@string/cell_coordinates_1_0"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell1_1"
@@ -88,7 +100,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view"
         app:layout_constraintStart_toEndOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/view3"
-        android:contentDescription="@string/cell_coordinates_1_1"/>
+        android:contentDescription="@string/cell_coordinates_1_1"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell1_2"
@@ -98,7 +113,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/view3"
-        android:contentDescription="@string/cell_coordinates_1_2"/>
+        android:contentDescription="@string/cell_coordinates_1_2"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell2_0"
@@ -108,7 +126,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ibCell2_1"
-        android:contentDescription="@string/cell_coordinates_2_0"/>
+        android:contentDescription="@string/cell_coordinates_2_0"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell2_1"
@@ -118,7 +139,10 @@
         app:layout_constraintEnd_toStartOf="@+id/view"
         app:layout_constraintStart_toEndOf="@+id/view2"
         app:layout_constraintTop_toBottomOf="@+id/view4"
-        android:contentDescription="@string/cell_coordinates_2_1"/>
+        android:contentDescription="@string/cell_coordinates_2_1"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
     <ImageButton
         android:id="@+id/ibCell2_2"
@@ -128,6 +152,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/ibCell2_1"
-        android:contentDescription="@string/cell_coordinates_2_2"/>
+        android:contentDescription="@string/cell_coordinates_2_2"
+
+        android:scaleType="fitCenter"
+        android:backgroundTint="@color/transparent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
