--- a/app/src/main/res/layout/classic_game_field_layout.xml
+++ b/app/src/main/res/layout/classic_game_field_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="1dp">
 
     <View
@@ -41,16 +41,13 @@
 
     <ImageButton
         android:id="@+id/ibCell0_0"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/vLine"
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/cell_coordinates_0_0"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell0_1"
@@ -62,8 +59,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/cell_coordinates_0_1"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell0_2"
@@ -75,8 +71,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/cell_coordinates_0_2"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell1_0"
@@ -88,8 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vLine"
         android:contentDescription="@string/cell_coordinates_1_0"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell1_1"
@@ -101,8 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vLine"
         android:contentDescription="@string/cell_coordinates_1_1"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell1_2"
@@ -114,8 +107,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vLine"
         android:contentDescription="@string/cell_coordinates_1_2"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell2_0"
@@ -127,8 +119,7 @@
         app:layout_constraintTop_toTopOf="@+id/ibCell2_1"
         android:contentDescription="@string/cell_coordinates_2_0"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell2_1"
@@ -140,8 +131,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view4"
         android:contentDescription="@string/cell_coordinates_2_1"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
     <ImageButton
         android:id="@+id/ibCell2_2"
@@ -153,7 +143,6 @@
         app:layout_constraintTop_toTopOf="@+id/ibCell2_1"
         android:contentDescription="@string/cell_coordinates_2_2"
 
-        android:scaleType="fitCenter"
-        android:backgroundTint="@color/transparent"/>
+        style="@style/game_field_theme"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
