--- a/app/src/main/res/layout/fragment_classic_game_session.xml
+++ b/app/src/main/res/layout/fragment_classic_game_session.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.game.sessions.classic.ClassicGameSessionFragment"
+    style="@style/game_fragment_theme" >
 
-    android:padding="20dp">
-
-    <FrameLayout
+    <com.livmas.tictactab.ui.views.SquareFrameLayout
         android:id="@+id/flFieldContainer"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="match_parent"
+        android:padding="2.5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <include
             android:id="@+id/field"
-            layout="@layout/classic_game_field_layout" />
+            layout="@layout/classic_game_field_layout"/>
 
-    </FrameLayout>
+    </com.livmas.tictactab.ui.views.SquareFrameLayout>
 
     <Button
         android:id="@+id/bRestart"
@@ -32,4 +32,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/flFieldContainer" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bRestart"
+
+        android:text="@string/app_name"/>
+
+</LinearLayout>
