--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TicTacTab" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TicTacTab" parent="Theme.TicTacTab.Base">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,10 +13,44 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/white</item>
-<!--        <item name="actionBarSize">0dp</item>-->
+    </style>
+
+    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!--        <item name="actionBarSize">0dp</item>-->
+
+        <item name="android:textViewStyle">
+            @style/textViewStyle
+        </item>
+
+        <item name="snackbarTextViewStyle">
+            @style/Theme.Snackbar
+        </item>
     </style>
 
     <style name="field_line">
         <item name="android:background">?attr/colorPrimary</item>
+    </style>
+
+    <style name="game_field_theme">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_margin">2dp</item>
+
+        <item name="android:scaleType">fitCenter</item>
+        <item name="backgroundTint">@color/transparent</item>
+    </style>
+
+    <style name="game_fragment_theme">
+        <item name="android:textSize">28sp</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="textViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">42sp</item>
+    </style>
+    <style name="Theme.Snackbar" parent="Widget.MaterialComponents.Snackbar.TextView">
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
