--- a/app/src/main/res/layout/fragment_classic_game_session.xml
+++ b/app/src/main/res/layout/fragment_classic_game_session.xml
@@ -33,12 +33,19 @@
         app:layout_constraintTop_toBottomOf="@+id/flFieldContainer" />
 
     <TextView
+        android:id="@+id/tvCurrentPlayerDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bRestart"
 
-        android:text="@string/app_name"/>
+        android:text="@string/current_player"/>
 
+    <ImageView
+        android:id="@+id/ivCurrentPlayer"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_x_cell"
+        android:contentDescription="@string/current_player_icon" />
 </LinearLayout>
