--- a/app/src/main/res/layout/fragment_game_main.xml
+++ b/app/src/main/res/layout/fragment_game_main.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.game.main.GameMainFragment">
+    android:padding="28dp"
+    tools:context=".ui.fragments.game.main.GameMainFragment"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/game_mode"
+        android:textAlignment="center"/>
 
     <Button
         android:id="@+id/bStartClassic"
+        style="@style/Theme.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/title_classic"
-        app:layout_constraintEnd_toStartOf="@+id/bStartComplex"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="16dp"
+        android:text="@string/title_classic"/>
 
     <Button
         android:id="@+id/bStartComplex"
+        style="@style/Theme.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_complex"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/bStartClassic"
-        app:layout_constraintTop_toTopOf="@+id/bStartClassic" />
+        android:text="@string/title_complex"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
