--- a/app/src/main/res/layout/fragment_classic_game_session.xml
+++ b/app/src/main/res/layout/fragment_classic_game_session.xml
@@ -7,20 +7,11 @@
     tools:context=".ui.fragments.game.sessions.classic.ClassicGameSessionFragment"
     style="@style/game_fragment_theme" >
 
-    <com.livmas.tictactab.ui.views.SquareFrameLayout
-        android:id="@+id/flFieldContainer"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/field"
+        android:name="com.livmas.tictactab.ui.fragments.game.ClassicGameFieldFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="2.5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <include
-            android:id="@+id/field"
-            layout="@layout/classic_game_field_layout"/>
-
-    </com.livmas.tictactab.ui.views.SquareFrameLayout>
+        android:layout_height="400dp"/>
 
     <Button
         android:id="@+id/bRestart"
