--- a/app/src/main/res/layout/classic_game_field_layout.xml
+++ b/app/src/main/res/layout/classic_game_field_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="1dp">
+    android:padding="1dp"
+    android:layout_gravity="center">
 
     <View
         android:id="@+id/view"
