--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#FF9A5CD1</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -10,6 +10,6 @@
 
     <color name="transparent">#00000000</color>
 
-    <color name="first_player">#F4AF73</color>
-    <color name="second_player">#FFBB86FC</color>
+    <color name="orange_200">#F4AF73</color>
+    <color name="orange_500">#FAA03E</color>
 </resources>
