--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.TicTacTab" parent="Theme.TicTacTab.Base">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/orange_200</item>
+        <item name="colorSecondaryVariant">@color/orange_500</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
@@ -15,8 +15,9 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!--        <item name="actionBarSize">0dp</item>-->
+    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+<!--        <item name="android:actionBarSize">0dp</item>-->
+<!--        <item name="actionBarSize">0dp</item>-->
 
         <item name="android:textViewStyle">
             @style/textViewStyle
@@ -38,7 +39,7 @@
     <style name="game_field_theme">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
-        <item name="android:layout_margin">2dp</item>
+        <item name="android:padding">5dp</item>
 
         <item name="android:scaleType">fitCenter</item>
         <item name="backgroundTint">@color/transparent</item>
